[gd_scene load_steps=3 format=3 uid="uid://doi0im6c1sf1a"]

[ext_resource type="Script" path="res://GDS/battery.gd" id="1_pn1px"]
[ext_resource type="Curve" uid="uid://bcdrmwsn2v6ct" path="res://Resources/Battery.tres" id="2_6s65i"]

[node name="Button" type="Button"]
offset_right = 134.0
offset_bottom = 125.0
script = ExtResource("1_pn1px")
VoltCurve = ExtResource("2_6s65i")

[node name="Bat1" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 17.0
offset_right = 67.0
offset_bottom = 106.0
mouse_filter = 2
fill_mode = 3

[node name="Bat2" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 16.0
offset_right = 131.0
offset_bottom = 106.0
mouse_filter = 2
fill_mode = 3

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = -1.0
offset_right = 125.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "Cansat Battery"

[node name="Bat1Name" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 106.0
offset_right = 62.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 12
text = "1: 0.0"

[node name="Bat2Name" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 106.0
offset_right = 125.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 12
text = "2: 0.0"
